--- a/Example/Chat Input/CustomChatInput.xib
+++ b/Example/Chat Input/CustomChatInput.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomChatInput" customModule="Example" customModuleProvider="target">
             <connections>
-                <outlet property="tvInput" destination="NXN-hw-uv1" id="HpR-AD-Jqj"/>
+                <outlet property="textField" destination="oKn-dc-97b" id="DpP-mX-jRf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,6 +31,38 @@
                         <action selector="clickSend:" destination="-1" eventType="touchUpInside" id="npz-r2-1Hv"/>
                     </connections>
                 </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oKn-dc-97b">
+                    <rect key="frame" x="50" y="10" width="275" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="pls-dj-Rw7"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidths">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="leftBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="topBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="rightBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="bottomBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.82533193010000006" green="0.82533193010000006" blue="0.82533193010000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eX8-dS-8SK">
                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                     <constraints>
@@ -43,24 +75,17 @@
                         <action selector="clickAttachment:" destination="-1" eventType="touchUpInside" id="kun-jy-4MV"/>
                     </connections>
                 </button>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NXN-hw-uv1">
-                    <rect key="frame" x="58" y="10" width="259" height="30"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
             </subviews>
             <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="KIv-HR-J1D" firstAttribute="centerY" secondItem="k7R-ZU-AZb" secondAttribute="centerY" id="B81-XS-cGF"/>
                 <constraint firstAttribute="height" constant="50" id="DLU-RV-8pF"/>
-                <constraint firstItem="NXN-hw-uv1" firstAttribute="top" secondItem="8Om-te-Qpk" secondAttribute="top" constant="10" id="Lg3-01-yEf"/>
-                <constraint firstItem="eX8-dS-8SK" firstAttribute="bottom" secondItem="8Om-te-Qpk" secondAttribute="bottom" id="N8P-ua-APx"/>
-                <constraint firstItem="8Om-te-Qpk" firstAttribute="bottom" secondItem="NXN-hw-uv1" secondAttribute="bottom" constant="10" id="O4h-Hw-yMs"/>
-                <constraint firstItem="NXN-hw-uv1" firstAttribute="centerY" secondItem="8Om-te-Qpk" secondAttribute="centerY" id="Pr8-lJ-Nas"/>
-                <constraint firstItem="KIv-HR-J1D" firstAttribute="bottom" secondItem="8Om-te-Qpk" secondAttribute="bottom" id="QLu-fL-FGS"/>
+                <constraint firstItem="KIv-HR-J1D" firstAttribute="leading" secondItem="oKn-dc-97b" secondAttribute="trailing" id="Sb7-zE-kua"/>
+                <constraint firstItem="eX8-dS-8SK" firstAttribute="top" secondItem="8Om-te-Qpk" secondAttribute="top" id="Soi-Or-XJR"/>
+                <constraint firstItem="eX8-dS-8SK" firstAttribute="bottom" secondItem="8Om-te-Qpk" secondAttribute="bottom" id="WqX-8J-v5r"/>
                 <constraint firstItem="eX8-dS-8SK" firstAttribute="leading" secondItem="8Om-te-Qpk" secondAttribute="leading" id="gOG-2e-H61"/>
-                <constraint firstItem="NXN-hw-uv1" firstAttribute="leading" secondItem="eX8-dS-8SK" secondAttribute="trailing" constant="8" id="ovW-JN-GXl"/>
-                <constraint firstItem="KIv-HR-J1D" firstAttribute="leading" secondItem="NXN-hw-uv1" secondAttribute="trailing" constant="8" id="w31-fr-0gD"/>
+                <constraint firstItem="oKn-dc-97b" firstAttribute="leading" secondItem="eX8-dS-8SK" secondAttribute="trailing" id="rYO-7g-a3Z"/>
+                <constraint firstItem="oKn-dc-97b" firstAttribute="centerY" secondItem="k7R-ZU-AZb" secondAttribute="centerY" id="wC6-nm-XnY"/>
                 <constraint firstAttribute="trailing" secondItem="KIv-HR-J1D" secondAttribute="trailing" id="zAX-l7-ZVv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
