--- a/QiscusUI/Controllers/Chat Input/UIChatInput.xib
+++ b/QiscusUI/Controllers/Chat Input/UIChatInput.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIChatInput" customModule="QiscusUI" customModuleProvider="target">
             <connections>
                 <outlet property="btnSend" destination="QQt-h9-LIp" id="Wk4-cC-Gb8"/>
-                <outlet property="tvInput" destination="YfP-fM-y60" id="S0c-Xh-1xK"/>
+                <outlet property="tfInput" destination="ZSi-gt-c6K" id="gJJ-nh-Jc1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,19 +31,44 @@
                         <action selector="clickUISendButton:" destination="-1" eventType="touchUpInside" id="uej-hI-By2"/>
                     </connections>
                 </button>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="YfP-fM-y60">
-                    <rect key="frame" x="16" y="6" width="301" height="38"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZSi-gt-c6K">
+                    <rect key="frame" x="10" y="10" width="315" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="vUz-z5-DMU"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidths">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="leftBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="topBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="rightBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="bottomBorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.82533193010000006" green="0.82533193010000006" blue="0.82533193010000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="0.95191062179999997" green="0.95191062179999997" blue="0.95191062179999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="YfP-fM-y60" firstAttribute="top" secondItem="QzY-bx-oqA" secondAttribute="top" constant="6" id="Apm-Pt-Dve"/>
-                <constraint firstItem="YfP-fM-y60" firstAttribute="leading" secondItem="QzY-bx-oqA" secondAttribute="leading" constant="16" id="Naq-Tw-tbi"/>
-                <constraint firstItem="QzY-bx-oqA" firstAttribute="bottom" secondItem="YfP-fM-y60" secondAttribute="bottom" constant="6" id="OTB-oP-Rd0"/>
-                <constraint firstItem="QQt-h9-LIp" firstAttribute="leading" secondItem="YfP-fM-y60" secondAttribute="trailing" constant="8" id="Yf9-9d-w3J"/>
+                <constraint firstItem="ZSi-gt-c6K" firstAttribute="leading" secondItem="QzY-bx-oqA" secondAttribute="leading" constant="10" id="6AA-3Q-JRr"/>
+                <constraint firstItem="QQt-h9-LIp" firstAttribute="leading" secondItem="ZSi-gt-c6K" secondAttribute="trailing" id="8Rb-gD-Dbe"/>
+                <constraint firstItem="ZSi-gt-c6K" firstAttribute="centerY" secondItem="0MB-aY-CqT" secondAttribute="centerY" id="elW-yf-trW"/>
                 <constraint firstAttribute="height" constant="50" id="iLV-9u-TRU"/>
                 <constraint firstItem="QQt-h9-LIp" firstAttribute="centerY" secondItem="0MB-aY-CqT" secondAttribute="centerY" id="jNP-6V-j2G"/>
                 <constraint firstAttribute="trailing" secondItem="QQt-h9-LIp" secondAttribute="trailing" id="vnn-kL-Ff5"/>
@@ -61,10 +86,10 @@
                     <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="219.5" y="-436"/>
+            <point key="canvasLocation" x="220" y="-436"/>
         </view>
     </objects>
     <resources>
-        <image name="send" width="21" height="21"/>
+        <image name="send" width="28" height="28"/>
     </resources>
 </document>
