--- a/Example/Chat View/Cell/TextLeftCell.xib
+++ b/Example/Chat View/Cell/TextLeftCell.xib
@@ -13,18 +13,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextLeftCell" rowHeight="161" id="KGk-i7-Jjw" customClass="TextLeftCell" customModule="QiscusUI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="135" height="161"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextLeftCell" rowHeight="161" id="KGk-i7-Jjw" customClass="TextLeftCell" customModule="Example" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="319" height="161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="135" height="160.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="160.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hh-dE-BIu">
-                        <rect key="frame" x="0.0" y="0.0" width="135" height="161"/>
+                        <rect key="frame" x="5" y="0.0" width="314" height="155.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Iu0-VT-qD4">
-                                <rect key="frame" x="0.0" y="7" width="77" height="154"/>
+                                <rect key="frame" x="0.0" y="7" width="77" height="148.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
                                         <real key="value" value="6"/>
@@ -41,7 +42,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEE-ol-nUK">
-                                <rect key="frame" x="27" y="149" width="42" height="10"/>
+                                <rect key="frame" x="27" y="143.5" width="42" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="orN-M3-PNV"/>
                                 </constraints>
@@ -50,7 +51,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="b" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ok4-GL-9Bo">
-                                <rect key="frame" x="23" y="35" width="46" height="111"/>
+                                <rect key="frame" x="23" y="35" width="46" height="105.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="rin-5v-5OI"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="ruK-E3-b82"/>
@@ -88,9 +89,9 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="5hh-dE-BIu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5dS-ES-Huw"/>
-                    <constraint firstAttribute="bottom" secondItem="5hh-dE-BIu" secondAttribute="bottom" id="AQ6-eO-sw1"/>
+                    <constraint firstAttribute="bottom" secondItem="5hh-dE-BIu" secondAttribute="bottom" constant="5" id="AQ6-eO-sw1"/>
                     <constraint firstAttribute="trailing" secondItem="5hh-dE-BIu" secondAttribute="trailing" id="ZzM-El-MGt"/>
-                    <constraint firstItem="5hh-dE-BIu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eL2-S3-Mjq"/>
+                    <constraint firstItem="5hh-dE-BIu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="eL2-S3-Mjq"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -104,7 +105,7 @@
                 <outlet property="tvContent" destination="ok4-GL-9Bo" id="gK0-PE-Gyn"/>
                 <outlet property="viewContainer" destination="5hh-dE-BIu" id="tf5-jY-4h0"/>
             </connections>
-            <point key="canvasLocation" x="-59.5" y="66.5"/>
+            <point key="canvasLocation" x="32.5" y="66.5"/>
         </tableViewCell>
     </objects>
 </document>
