--- a/Example/Chat View/Cell/TextRightCell.xib
+++ b/Example/Chat View/Cell/TextRightCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextRightCell" rowHeight="154" id="KGk-i7-Jjw" customClass="TextRightCell" customModule="QiscusUI" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextRightCell" rowHeight="154" id="KGk-i7-Jjw" customClass="TextRightCell" customModule="Example" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="323" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,10 +20,11 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aza-wY-aNQ">
-                        <rect key="frame" x="0.0" y="0.0" width="323" height="153.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="318" height="148.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Rmt-lx-aOk">
-                                <rect key="frame" x="244" y="4" width="77" height="147.5"/>
+                                <rect key="frame" x="239" y="4" width="77" height="142.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
                                         <real key="value" value="6"/>
@@ -31,7 +32,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmf-nu-Icb">
-                                <rect key="frame" x="241" y="134.5" width="42" height="10"/>
+                                <rect key="frame" x="236" y="129.5" width="42" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="dIy-IM-cs8"/>
                                 </constraints>
@@ -40,7 +41,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="halo" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIZ-bQ-K17">
-                                <rect key="frame" x="252" y="10" width="50" height="123"/>
+                                <rect key="frame" x="247" y="10" width="50" height="118"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="4DS-Kk-b2v"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="QK2-SF-dQW"/>
@@ -50,7 +51,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vi-q4-ytq">
-                                <rect key="frame" x="260" y="2" width="42" height="0.0"/>
+                                <rect key="frame" x="255" y="2" width="42" height="0.0"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="4IC-wC-uwH"/>
                                 </constraints>
@@ -59,14 +60,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1G6-V5-pNK">
-                                <rect key="frame" x="288" y="133" width="14" height="14"/>
+                                <rect key="frame" x="283" y="128" width="14" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="14" id="7l0-87-O96"/>
                                     <constraint firstAttribute="height" constant="14" id="ron-su-zqG"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mmf-nu-Icb" firstAttribute="top" secondItem="jIZ-bQ-K17" secondAttribute="bottom" constant="2" id="105-Ml-UgG"/>
                             <constraint firstItem="Rmt-lx-aOk" firstAttribute="centerY" secondItem="jIZ-bQ-K17" secondAttribute="centerY" constant="6.25" id="3J0-XI-8af"/>
@@ -84,13 +85,15 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="Aza-wY-aNQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8Hl-fx-ynR"/>
                     <constraint firstItem="Aza-wY-aNQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="R5a-UW-4gA"/>
-                    <constraint firstAttribute="trailing" secondItem="Aza-wY-aNQ" secondAttribute="trailing" id="brg-ou-qU0"/>
-                    <constraint firstAttribute="bottom" secondItem="Aza-wY-aNQ" secondAttribute="bottom" id="gpj-uS-fuc"/>
+                    <constraint firstAttribute="trailing" secondItem="Aza-wY-aNQ" secondAttribute="trailing" constant="5" id="brg-ou-qU0"/>
+                    <constraint firstAttribute="bottom" secondItem="Aza-wY-aNQ" secondAttribute="bottom" constant="5" id="gpj-uS-fuc"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="ivBaloonLeft" destination="Rmt-lx-aOk" id="Wzz-yd-7ve"/>
